tests/field/set_on_fn.rev
fn foo() {}

foo.bar = true // error: only structure instances have properties